--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,33 +3,43 @@
     padding: 0;
 }
 
+
 html {
     font-size: 16px;
     color: #00064D;
 }
 
+
 body {
     font-family: Inter-Regular;
 }
 
+
 a {
     color: #00064D;
 }
+
 
 @font-face {
     font-family: Inter-Regular;
     src: url(../fonts/Inter_18pt-Regular.ttf);
 }
 
+
 @font-face {
     font-family: Inter-Medium;
     src: url(../fonts/Inter_18pt-Medium.ttf);
 }
 
+
 @font-face {
     font-family: Inter-SemiBold;
     src: url(../fonts/Inter_18pt-SemiBold.ttf);
 }
+
+
+
+/* Header */
 
 header{
     height: 100px;
@@ -41,11 +51,13 @@ header{
     font-family: Inter-Medium;
 }
 
+
 .header__logo {
     font-size: 1.75rem;
     display: flex;
     gap: 1.25rem;
 }
+
 
 .header__menu nav ul{
     font-size: 1.25rem;
@@ -54,14 +66,27 @@ header{
     list-style: none;
 }
 
+
 .header__menu nav ul a{
     text-decoration: none;
 }
+
 
 .header__menu nav ul a:hover{
     color: #604239;
     text-decoration: underline;
 }
+
+
+main{
+    display: flex;
+    flex-direction: column;
+    gap: 250px;
+}
+
+
+
+/* Intro block */
 
 .intro{
     background-color: #F8C867;
@@ -70,6 +95,7 @@ header{
     justify-content: space-between;
 }
 
+
 .intro__text {
     width: 530px;
     display: flex;
@@ -77,23 +103,58 @@ header{
     gap: 50px;
 }
 
+
 .intro__text div{
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
 
+
 .intro__text h1{
     font-family: Inter-SemiBold;
     font-size: 4rem;
 }
+
 
 .intro__text h2{
     font-family: Inter-Medium;
     font-size: 2.25rem;
 }
 
+
 .intro__text p{
     font-family: Inter-Regular;
     font-size: 1.5rem;
+}
+
+
+
+/* Products block */
+
+.products {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+
+.products h1{
+    font-family: Inter-SemiBold;
+    font-size: 2.5rem;
+    text-align: center;
+}
+
+
+.products_carousel{
+    padding: 0px 150px 0px 150px;
+}
+
+.products_carousel .slick-slide {
+    margin: 0 5px;
+}
+
+
+.products_carousel img {
+    width: 523px;
 }
