--- a/static/css/style.css
+++ b/static/css/style.css
@@ -89,7 +89,7 @@ main{
 /* Intro block */
 
 .intro{
-    background-color: #F8C867;
+    background-image: url(../img/intro_bg.svg);
     padding: 150px 150px 329px 150px;
     display: flex;
     justify-content: space-between;
@@ -129,6 +129,10 @@ main{
 }
 
 
+.intro__image img {
+    width: 830px;
+    height: 490px
+}
 
 /* Products block */
 
@@ -147,14 +151,65 @@ main{
 
 
 .products_carousel{
-    padding: 0px 150px 0px 150px;
+    margin: 0px 150px 0px 150px;
 }
+
 
 .products_carousel .slick-slide {
     margin: 0 5px;
 }
 
 
-.products_carousel img {
+.products_carousel div {
+    text-align: center;
+}
+
+.products_carousel div p{
+    font-size: 24px;
+    margin-top: 10px;
+}
+
+.products_carousel div img {
     width: 523px;
+}
+
+
+.about {
+    background-color: #EBEBEB;
+    padding: 50px 0px 100px 0px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+
+.about__cards {
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+}
+
+
+.about__card {
+    background-color: #F7F7F7;
+    padding: 75px 25px 150px 25px;
+    transition-duration: 0.25s;
+}
+
+
+.about__card div{
+    margin-top: 25px;
+}
+
+
+.about__card div p{
+    margin-top: 10px;
+    width: 400px;
+}
+
+
+.about__card:hover{
+    background-color: #F8C867;
+    color: #604239;
 }
