--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -4,11 +4,6 @@
 }
 
 
-p {
-    margin-bottom: 0;
-}
-
-
 html {
     font-size: 16px;
     color: #00064D;
@@ -17,15 +12,10 @@ html {
 
 body {
     font-family: Inter-Regular;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100vh;
 }
 
 
 a {
-
     color: #00064D;
 }
 
@@ -111,21 +101,30 @@ header{
 }
 
 
+/*   Main   */
+
+
 main {
-    margin-top: 10vh;
-    padding: 0px 150px 0px 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10vh 5vw 0vh 5vw;
+    gap: 2vw;
 }
 
 
-.main-header{
-    text-align: center;
-    margin-bottom: 5vh;
+.gallery {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    row-gap: 1vh;
+    column-gap: 1vw;
 }
 
 
-.item {
-    padding: 2.5vh 0vw 2.5vh 0vw;
+.gallery img {
+    width: 100%;
 }
+
 
 
 footer {
@@ -133,6 +132,13 @@ footer {
     color: #F8C867;
     margin-top: 10vh;
     padding: 7vh 10vw 5vh 10vw;
+    display: flex;
+    flex-direction: column;
+    gap: 5vh;
+}
+
+
+.footer__top{
     display: flex;
     justify-content: space-between;
     align-items: end;
@@ -178,7 +184,7 @@ footer nav a img{
 }
 
 
-.footer__center {
+.footer__bottom {
     text-align: center;
 }
 
@@ -187,4 +193,42 @@ footer nav a img{
     display: flex;
     flex-direction: column;
     gap: 1vh;
+}
+
+
+
+@media (max-width: 768px) {
+    html {
+        width: 100%;
+    }
+
+
+    main{
+    gap: 10vh;
+}
+
+
+    header{
+        flex-direction: column;
+        gap: 2.5vh;
+    }
+
+
+    .header__menu nav ul{
+        flex-direction: column;
+        gap: 0.75vh;
+    }
+
+
+    footer {
+        flex-direction: column;
+        padding: 7vh 3vw 5vh 3vw;
+    }
+
+
+    .footer__top {
+        flex-direction: column;
+        gap: 5vh;
+        align-items: center;
+    }
 }
