--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -205,7 +205,7 @@ footer nav a img{
 
     main{
     gap: 10vh;
-}
+    }
 
 
     header{
@@ -217,6 +217,11 @@ footer nav a img{
     .header__menu nav ul{
         flex-direction: column;
         gap: 0.75vh;
+    }
+
+
+    .gallery {
+        grid-template-columns: auto;
     }
 
 
