--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -113,7 +113,7 @@ header{
 
 main {
     margin-top: 10vh;
-    padding: 0px 150px 0px 150px;
+    padding: 0vh 5vw 0vh 5vw;
 }
 
 
@@ -187,4 +187,49 @@ footer nav a img{
     display: flex;
     flex-direction: column;
     gap: 1vh;
+}
+
+
+@media (max-width: 768px) {
+    html {
+        width: 100%;
+    }
+
+
+    main{
+    gap: 10vh;
+
+}
+
+
+    header{
+        flex-direction: column;
+        gap: 2.5vh;
+    }
+
+
+    .header__menu nav ul{
+        flex-direction: column;
+        gap: 0.75vh;
+    }
+
+
+    main div{
+    width: 100%;
+}
+
+
+    footer {
+        flex-direction: column;
+        padding: 7vh 3vw 5vh 3vw;
+        align-items: center;
+        gap: 5vh;
+    }
+
+
+    .footer__top {
+        flex-direction: column;
+        gap: 5vh;
+        align-items: center;
+    }
 }
